--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,9 @@
   "name": "sourovroy/wp-plugin-unit-test",
   "description": "WordPress plugin unit testing basics.",
   "require-dev": {
-    "phpunit/phpunit": "^6"
+    "phpunit/phpunit": "^6",
+    "dealerdirect/phpcodesniffer-composer-installer": "*",
+    "wp-coding-standards/wpcs": "*",
+    "phpcompatibility/phpcompatibility-wp": "*"
   }
 }
